--- a/src/scss/views/pdp.scss
+++ b/src/scss/views/pdp.scss
@@ -38,4 +38,32 @@
         }
     }
   }
+
+  .product-info {
+    //product callout
+    .product_title_with_info{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        .product-title {
+            font-family: Montserrat;
+            font-size: 30px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: normal;
+            letter-spacing: 6px;
+            text-transform: uppercase;
+        }
+        .loox-rating-content{
+            color: #1C1C1C;
+            font-family: Nunito Sans;
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+            text-transform: uppercase;
+        }
+    }
+
+  }
 }
