--- a/assets/main.css
+++ b/assets/main.css
@@ -38,3 +38,26 @@
   width: -moz-fit-content;
   width: fit-content;
 }
+.template-product .product-info .product_title_with_info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.template-product .product-info .product_title_with_info .product-title {
+  font-family: Montserrat;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 6px;
+  text-transform: uppercase;
+}
+.template-product .product-info .product_title_with_info .loox-rating-content {
+  color: #1C1C1C;
+  font-family: Nunito Sans;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: uppercase;
+}
