wokring on complimentary product

--- a/assets/main.css
+++ b/assets/main.css
@@ -177,3 +177,103 @@
   line-height: 22px; /* 137.5% */
   letter-spacing: 0.8px;
 }
+.template-product .product-info .feature-badge-list-v2 {
+  justify-content: space-evenly;
+}
+.template-product .product-info .feature-badge-list-v2 .product-info__block-item {
+  width: 100px;
+}
+.template-product .product-info .feature-badge-list-v2 .product-info__block-item .feature-badge {
+  flex-direction: column;
+  row-gap: 18px;
+  text-align: center;
+  font-family: Nunito Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  text-transform: uppercase;
+}
+.template-product .product-info .product-info__block-item[data-block-type=complementary-products] .complementary-products__header p {
+  color: #1C1C1C;
+  font-family: Nunito Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 22px; /* 137.5% */
+  letter-spacing: 0.8px;
+}
+.template-product .product-info .product-info__block-item[data-block-type=complementary-products] .horizontal-product-card {
+  border-radius: 22px;
+  background: #1C1C1C;
+  padding: 18px 22px;
+}
+.template-product .product-info .product-info__block-item[data-block-type=complementary-products] .horizontal-product-card .horizontal-product-card__figure {
+  border-radius: 15px;
+  overflow: hidden;
+}
+.template-product .product-info .product-info__block-item[data-block-type=complementary-products] .horizontal-product-card .horizontal-product-card__info .product-title {
+  color: #FFF;
+  font-family: Montserrat;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 1.8px;
+  text-transform: uppercase;
+}
+.template-product .product-info .product-info__block-item[data-block-type=complementary-products] .horizontal-product-card .horizontal-product-card__info price-list sale-price {
+  color: #FFF;
+  font-family: Montserrat;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 1.56px;
+  text-transform: uppercase;
+}
+.template-product .product-info .product-info__block-item[data-block-type=complementary-products] .horizontal-product-card .horizontal-product-card__info price-list compare-at-price {
+  color: rgba(255, 255, 255, 0.6);
+  font-family: Montserrat;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 1.56px;
+  text-decoration-line: strikethrough;
+  text-transform: uppercase;
+}
+.template-product .product-info .product-info__block-item[data-block-type=complementary-products] .horizontal-product-card .horizontal-product-card__info .short_description_text {
+  color: #FFF;
+  font-family: Nunito Sans;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  letter-spacing: 1.56px;
+}
+.template-product .product-info .product-info__block-item[data-block-type=complementary-products] .horizontal-product-card .horizontal-product-card__info .button--outline {
+  width: 100%;
+  margin-bottom: 12px;
+  color: #fff;
+  text-align: center;
+  font-family: Nunito Sans;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
+}
+.template-product .product-info .product-info__block-item[data-block-type=complementary-products] .horizontal-product-card .horizontal-product-card__info .button--primary {
+  background: #0500FF;
+  color: #FFF;
+  text-align: center;
+  font-family: Nunito Sans;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
+}
